[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# needed to allow install of unreleased temgym_core from .zip
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/temgym_ui",
]
only-packages = true

[project]
name = "temgym-ui"
version = "0.0.1"
authors = [
  { name="David Landers", email="davidlandersresearch@gmail.com" },
  { name="Matthew Bryan", email="matthewbryan52@gmail.com" },
  { name="Dieter Weber", email="d.weber@fz-juelich.de" },
]
description = "An educational TEM ray tracing matrix package"
readme = "README.md"
keywords=["electron microscopy", "virtual twin", "gui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12", 
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  'temgym_core @ https://github.com/TemGym/TemGymCore/archive/refs/heads/main.zip',
  'jax',
  'numpy',
  'numba',
  'typing-extensions',
  'PySide6',
  'pyqtgraph',
  'superqt',
  'pyopengl',
  'triangle',
]

[project.scripts]
temgym = "temgym_ui.cli:main_window"

[project.urls]
"Homepage" = "https://github.com/TemGym/TemGymUI"


